feat: add cityId for institutes query
